fix: add missing border to live code editor

--- a/src/components/live-code/live-code.module.css
+++ b/src/components/live-code/live-code.module.css
@@ -6,16 +6,12 @@
   border-radius: env(--radius-8);
   font-size: env(--font-size-18);
   margin-top: env(--space-8);
+  border: 1px solid var(--dimmed-1);
 
   & > * {
 
     /* stylelint-disable-next-line declaration-no-important */
     padding: env(--space-24) !important;
-  }
-
-  & *::-moz-selection {
-    background-color: var(--dimmed-3);
-    text-shadow: none;
   }
 
   & *::selection {
